--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title></title>
 		<meta charset="utf-8" />
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="style.css" />
         <!-- CSS only -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
@@ -17,7 +17,7 @@
           <header>
             <div class="overlay"></div>
             <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-              <source src="video/piano.mp4" type="video/mp4">
+              <source src="piano.mp4" type="video/mp4">
             </video>
             <div class="container h-100">
               <div class="d-flex h-100 text-center align-items-center">
@@ -61,7 +61,7 @@
                   </div>
 
                   <div class="card mb-3">
-                    <img class="card-img-top" src="images/piano01.png" alt="História">
+                    <img class="card-img-top" src="piano01.png" alt="História">
                     <div class="card-body">
                       <h4 class="card-title font"><a name="historia">História</a></h4>
                       <p class="card-text font">O piano foi inventado na Itália por Bartolomeu Cristofori, em 1698, e difundiu-se pela Europa ao longo do século 18. Foi também chamado de pianoforte ou fortepiano.</p>
@@ -72,7 +72,7 @@
                   </div>
 
                   <div class="card mb-3">
-                    <img class="card-img-top" src="images/piano02.png" alt="Mecanismos">
+                    <img class="card-img-top" src="piano02.png" alt="Mecanismos">
                     <div class="card-body">
                       <h4 class="card-title font"><a name="mecanismos">Mecanismos</a></h4>
                       <h5 class="card-title font">Teclas</h5>
@@ -84,13 +84,13 @@
                     </div>
                   </div>
                   <div class="card mb-3">
-                    <img class="card-img-top" src="images/piano03.png" alt="Pianistas Notáveis">
+                    <img class="card-img-top" src="piano03.png" alt="Pianistas Notáveis">
                     
                     <h4 class="card-title font"><br><a name="pianistas">Pianistas Notáveis</a><br><br></h4>
 
                   <div class="card-group">
                     <div class="card">
-                      <img class="card-img-top" src="images/Beethoven_Hornemann.jpg" alt="Ludwig van Beethoven">
+                      <img class="card-img-top" src="Beethoven_Hornemann.jpg" alt="Ludwig van Beethoven">
                       <div class="card-body">
                         <h5 class="card-title font">Ludwig van Beethoven</h5>
                         <small class="text-muted">1770-1827</small>
@@ -101,7 +101,7 @@
                       </div>
                     </div>
                     <div class="card">
-                      <img class="card-img-top" src="images/Wolfgang_A_Mozart.jpg" alt="Wolfgang Amadeus Mozart">
+                      <img class="card-img-top" src="Wolfgang_A_Mozart.jpg" alt="Wolfgang Amadeus Mozart">
                       <div class="card-body">
                         <h5 class="card-title font">Wolfgang A. Mozart</h5>
                         <small class="text-muted">1756-1791</small>
@@ -112,7 +112,7 @@
                       </div>
                     </div>
                     <div class="card">
-                      <img class="card-img-top" src="images/Frederic_Chopin.jpg" alt="Frédéric Chopin">
+                      <img class="card-img-top" src="Frederic_Chopin.jpg" alt="Frédéric Chopin">
                       <div class="card-body">
                         <h5 class="card-title font">Frédéric Chopin</h5>
                         <small class="text-muted">1810-1849</small>
